--- a/be/MyProject/package.json
+++ b/be/MyProject/package.json
@@ -14,6 +14,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@railway/cli": "^3.5.2",
       "@types/amqplib": "^0.10.4",
       "@types/multer": "^1.4.10",
       "amqplib": "^0.10.3",
